# open-pencil

./: AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  index.html  oxlint.json  package.json  playwright.config.ts  steiger.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build.yml
desktop/: Cargo.toml  tauri.conf.json
lint/: plugin.js
scripts/: check-package-metadata.ts  steiger-rules.ts  visual-bisect.ts
src/: app.css
src/app/demo/: document.ts
src/app/shell/: ui.ts
src/app/shell/menu/: use.ts  (+4 more)
src/components/: AppMenu.vue  AssetsPanel.vue  CanvasMenu.vue  CodePanel.vue  EditorCanvas.vue  LayerTree.vue  LayersPanel.vue  PagesPanel.vue  PickerSlider.vue  ScrubInput.vue  VariablesDialog.vue
src/components/ColorPickerPanel/: HsbFields.vue  HslFields.vue  OkhclFields.vue
src/components/Toolbar/: DesktopToolbar.vue  MobileToolbar.vue  ToolButton.vue  ToolFlyout.vue  ToolbarActionGroup.vue
src/components/chat/: AcpPermissionDialog.vue  ChatMessage.vue
src/components/properties/: BoundVariableButton.vue  ColorStyleRow.vue  EffectsSection.vue  VariablePickerPopover.vue
src/components/ui/: AppGroupedSelect.vue  AppSelect.vue  toast.ts
tests/e2e/: autosave.spec.ts  components.spec.ts  fixtures.ts
tests/e2e/app/: menu.spec.ts
tests/e2e/canvas/: component-labels.spec.ts  frame-overlays.spec.ts  manipulation.spec.ts  renderer-visuals.spec.ts
tests/e2e/chat/: panel.spec.ts
tests/e2e/clipboard/: copy-paste.spec.ts  paste-into-container.spec.ts
tests/helpers/: canvas.ts  store.ts  test-ids.ts
(+151 files in other folders)
